--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,13 @@ html,
 body {
   padding: 0;
   margin: 0;
+  color: white;
+  background: black;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+html {
+  color-scheme: dark;
 }
 
 a {
